<resources>
    <string name="app_name">MyAwesomeApp</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="please_try_again">Please try again.</string>
    <string name="my_awesome_app">My Awesome App</string>
</resources>
